start working on optimization

--- a/extlibs/zquatev/Makefile
+++ b/extlibs/zquatev/Makefile
@@ -1,5 +1,5 @@
 
-machine = lenovo
+machine = mac #lenovo
 
 INCLUDE = -I.
 ifeq ($(machine), lenovo)
@@ -9,7 +9,8 @@ ifeq ($(machine), lenovo)
 else
    CXX = g++
    CXXFLAGS = -O2 -DNDEBUG -std=c++11 $(INCLUDE)
-   MATHLIB = /Users/zhendongli/anaconda2/envs/py38/lib  
+   #MATHLIB = /Users/zhendongli/anaconda2/envs/py38/lib  
+   MATHLIB = /opt/intel/compilers_and_libraries_2020.4.304/linux/mkl/lib/intel64 
 endif
 
 LIBS = -L$(MATHLIB) -lmkl_intel_lp64 -lmkl_core -lmkl_sequential -lpthread -lm -ldl 
