--- a/extlibs/zquatev/Makefile
+++ b/extlibs/zquatev/Makefile
@@ -1,7 +1,9 @@
 
-machine = mac #lenovo
+machine = scy0799 #scy0799 #scv7260 #DCU_419 #mac #lenovo
 
 INCLUDE = -I.
+
+LIBS =
 ifeq ($(strip $(machine)), lenovo)
    CXX = icpc
    CXXFLAGS = -O2 -DNDEBUG -std=c++17 $(INCLUDE)
@@ -10,13 +12,26 @@ else ifeq ($(strip $(machine)), dell)
    CXX = icpc 
    CXXFLAGS = -O2 -DNDEBUG -std=c++17 $(INCLUDE)
    MATHLIB =/data/apps/oneAPI/2022.2/mkl/latest/lib/intel64
+else ifeq ($(strip $(machine)), DCU_419)
+   CXX = icpc 
+   CXXFLAGS = -O2 -DNDEBUG -std=c++17 $(INCLUDE)
+   MATHLIB = /public/software/compiler/intel/oneapi/mkl/latest/lib/intel64
+else ifeq ($(strip $(machine)), scv7260)
+   CXX = icpc 
+   CXXFLAGS = -O2 -DNDEBUG -std=c++17 $(INCLUDE)
+   MATHLIB =/data/apps/oneAPI/2022.2/mkl/latest/lib/intel64
+else ifeq ($(strip $(machine)), scy0799)
+   CXX = icpc 
+   CXXFLAGS = -O2 -DNDEBUG -std=c++17 $(INCLUDE)
+   MATHLIB =/data/apps/OneApi/2022.1/oneapi/mkl/latest/lib/intel64/
 else
    CXX = g++
    CXXFLAGS = -O2 -DNDEBUG -std=c++17 $(INCLUDE)
    MATHLIB = /opt/anaconda3/envs/work/lib
+   LIBS += -lm
 endif
 
-LIBS = -L$(MATHLIB) -Wl,-rpath,$(MATHLIB) -lmkl_intel_lp64 -lmkl_core -lmkl_sequential -lpthread -lm -ldl 
+LIBS += -L$(MATHLIB) -Wl,-rpath,$(MATHLIB) -lmkl_intel_lp64 -lmkl_core -lmkl_sequential -lpthread  -ldl 
 LD       = $(CXX)
 LDFLAGS  = $(CXXFLAGS) $(LIBS)
 #LFLAGS = -shared -fPIC
