--- a/src/ctns/gpu_kernel/Makefile
+++ b/src/ctns/gpu_kernel/Makefile
@@ -1,11 +1,13 @@
 
-machine = dell2 #dell2 #scv7260 #scy0799 #scv7260 #DCU_419 #mac #lenovo
+machine = jiageng #dell2 #dell2 #scv7260 #scy0799 #scv7260 #DCU_419 #mac #lenovo
 
 ifeq ($(strip $(machine)), dell2)
-   CXX = nvcc
    CUDA_DIR = /home/dell/anaconda3/envs/pytorch
+else ifeq ($(strip $(machine)), jiageng)
+   CUDA_DIR= ${CUDADIR}
 endif
-CXXFLAGS = -O2 
+CXX = nvcc
+CXXFLAGS = -O3 -std=c++11 -I${CUDA_DIR}/include 
 
 LD       = $(CXX)
 LDFLAGS  = $(CXXFLAGS) $(LIBS)
