✨ feat(interface): bind python
1. Bind the post, fock, integral using pybind11

--- a/extlibs/zquatev/Makefile
+++ b/extlibs/zquatev/Makefile
@@ -1,6 +1,6 @@
 
-machine = dell2 # cluster#dell2 #scv7260 #scy0799 #scv7260 #DCU_419 #mac #lenovo
-USE_MKL = yes
+machine = archlinux # cluster#dell2 #scv7260 #scy0799 #scv7260 #DCU_419 #mac #lenovo
+USE_MKL = no
 USE_ILP64 = yes # by default
 
 INCLUDE = -I.
@@ -55,9 +55,18 @@ else ifeq ($(strip $(machine)), archlinux)
    LIBS += -lm
 endif
 
-ifeq ($(strip $(USE_BLAS)), yes)
-      CXXFLAGS += -DLAPACK_ILP64 -DMKL_ILP64 -DOPENBLAS_USE64BITINT -DUSE64BITINT
-      LIBS += -L$(MATHLIB) -Wl,-rpath,$(MATHLIB) -lopenblas  -lpthread  -ldl 
+ifeq ($(strip $(USE_MKL)),yes)
+   # serial version of MKL
+   ifeq ($(strip $(USE_ILP64)), no)
+   LIBS += -L$(MATHLIB) -Wl,-rpath,$(MATHLIB) \
+          -lmkl_intel_lp64 -lmkl_core -lmkl_sequential -lpthread -lm -ldl
+   else
+   LIBS += -L$(MATHLIB) -Wl,-rpath,$(MATHLIB) \
+          -lmkl_intel_ilp64 -lmkl_core -lmkl_sequential -lpthread -lm -ldl -DMKL_ILP64 -m64
+   endif
+else
+   CXXFLAGS += -DLAPACK_ILP64 -DMKL_ILP64 -DOPENBLAS_USE64BITINT -DUSE64BITINT
+   LIBS += -L$(MATHLIB) -Wl,-rpath,$(MATHLIB) -lopenblas  -lpthread  -ldl 
 endif
 
 LD       = $(CXX)
