revise diagGPU: note gpu_kernel needs to be comipled with the cuda toolkit that matches the runtime

--- a/src/ctns/gpu_kernel/Makefile
+++ b/src/ctns/gpu_kernel/Makefile
@@ -1,30 +1,31 @@
 
-machine = wuhan#jiageng #dell2 #dell2 #scv7260 #scy0799 #scv7260 #DCU_419 #mac #lenovo
+machine = dell2 #jiageng #dell2 #dell2 #scv7260 #scy0799 #scv7260 #DCU_419 #mac #lenovo
 
 ifeq ($(strip $(machine)), dell2)
-   CUDA_DIR = /home/dell/anaconda3/envs/pytorch
+   CUDA_DIR = ${CUDADIR}
 else ifeq ($(strip $(machine)), jiageng)
    CUDA_DIR= ${CUDADIR}
 else ifeq ($(strip $(machine)), wuhan)
    CUDA_DIR=/home/HPCBase/compilers/cuda/11.4.0
 endif
+
 CXX = nvcc
-CXXFLAGS = -O3 -std=c++11 -I${CUDA_DIR}/include 
 
-LD       = $(CXX)
-LDFLAGS  = $(CXXFLAGS) $(LIBS)
-#LFLAGS = -shared -fPIC
-#LFLAGS = -dynamiclib -fPIC # for *.dylib
+CXXFLAGS = -O3 -std=c++11 -I${CUDA_DIR}/include  
 
-OBJECTS = twodot_diagGPU_kernel.o 
+SRCS = twodot_diagGPU_kernel.cu
 
-all: libctnsGPU.a
+OBJS = $(SRCS:.cu=.o)
 
-libctnsGPU.a: $(OBJECTS)
-	ar crv $@ $^
+LIBRARY = libctnsGPU.a
 
+all: $(LIBRARY)
+	
 %.o: %.cu
 	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+$(LIBRARY): $(OBJS)
+	ar crv $@ $^
 
 clean:
 	rm -f *.o *.a *.out 
