--- a/extlibs/zquatev/Makefile
+++ b/extlibs/zquatev/Makefile
@@ -1,5 +1,5 @@
 
-machine = mac # cluster#dell2 #scv7260 #scy0799 #scv7260 #DCU_419 #mac #lenovo
+machine = lenovo #mac # cluster#dell2 #scv7260 #scy0799 #scv7260 #DCU_419 #mac #lenovo
 
 USE_GCC = yes
 USE_OPENMP = yes
@@ -10,9 +10,13 @@ INCLUDE = -I.
 
 LIBS =
 ifeq ($(strip $(machine)), lenovo)
-   CXX = icpc
+   #CXX = icpc
+   #FLAGS = -O2 -DNDEBUG -std=c++17 $(INCLUDE)
+   #MATHLIB =/data/apps/oneAPI/2022.2/mkl/latest/lib/intel64
+   CXX = g++ #icpc 
    FLAGS = -O2 -DNDEBUG -std=c++17 $(INCLUDE)
-   MATHLIB =/data/apps/oneAPI/2022.2/mkl/latest/lib/intel64
+   MATHLIB = ${MKLROOT}
+
 else ifeq ($(strip $(machine)), dell)
    CXX = icpc 
    FLAGS = -O2 -DNDEBUG -std=c++17 $(INCLUDE)
