--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ extlibs/zstd-dev/
 extlibs/magma-2.6.1/
 extlibs/gsl-2.7.1/
 extlibs/nlopt-2.7.1
+extlibs/gperftools-master
 pyutils/.ipynb_checkpoints/
 src.tar
 .*.swo
